--- a/style.css
+++ b/style.css
@@ -26,3 +26,24 @@ body {
     font-size: 32px;
     letter-spacing: 1.1px;
 }
+
+.step-line {
+    margin-top: 25px;
+    width: 100%;
+    height: 3px;
+    background-color: #ccc;
+    display: flex;
+    justify-content: space-between;
+}
+
+.step-line__dot {
+    width: 15px;
+    height: 15px;
+    background-color: #ccc;
+    border-radius: 50%;
+    transform: translateY(-40%);
+}
+
+.step-line__dot--active {
+    background-color: #097AFF;
+}
