--- a/scss/style.scss
+++ b/scss/style.scss
@@ -1,5 +1,7 @@
+@import 'mixins';
+
 body {
-  font-family: 'Open Sans', sans-serif;
+  font-family: "Open Sans", sans-serif;
   width: 1200px;
   margin: 0 auto;
 }
@@ -13,11 +15,11 @@ body {
 .logo-box {
   width: 25vh;
   margin-left: 40px;
-}
 
-.logo-box__img {
-  display: block;
-  max-width: 100%;
+  &__img {
+    display: block;
+    max-width: 100%;
+  }
 }
 
 .heading {
@@ -34,52 +36,96 @@ body {
   background-color: #ccc;
   display: flex;
   justify-content: space-between;
-}
 
-.step-line__dot {
-  width: 15px;
-  height: 15px;
-  background-color: #ccc;
-  border-radius: 50%;
-  transform: translateY(-40%);
-}
+  &__dot {
+    width: 15px;
+    height: 15px;
+    background-color: #ccc;
+    border-radius: 50%;
+    transform: translateY(-40%);
 
-.step-line__dot--active {
-  background-color: #097AFF;
+    &--active {
+      background-color: #097aff;
+    }
+  }
+
 }
 
 .form-view {
-  box-shadow: 10px 5px 15px 0 rgba(0, 0, 0, .25);
+  box-shadow: 10px 5px 15px 0 rgba(0, 0, 0, 0.25);
   border-radius: 5px;
   height: 55vh;
   width: 70%;
   margin: 50px auto 0;
-}
 
-.form-view__title {
-  font-size: 24px;
-  margin-left: 30px;
-  padding-top: 20px;
-  text-align: center;
-}
+  &__title {
+    font-size: 24px;
+    margin-left: 30px;
+    padding-top: 20px;
+    text-align: center;
+  }
 
-.form-view__question {
-  font-size: 22px;
-  margin-top: 20px;
-  margin-left: 30px;
-  text-align: center;
-}
+  &__question {
+    font-size: 22px;
+    margin-top: 20px;
+    margin-left: 30px;
+    text-align: center;
+  }
 
-.form-view__input {
-  width: 50%;
-  margin-left: 30px;
-  margin-top: 30px;
-  position: relative;
-  display: flex;
-}
+  &__input {
+    width: 50%;
+    margin-left: 30px;
+    margin-top: 30px;
+    position: relative;
+    display: flex;
 
-.form-view__input--text {
-  margin: 40px auto;
+    &--text {
+      margin: 40px auto;
+
+      &::after {
+        content: "Wpisz imię";
+        position: absolute;
+        top: -15px;
+        left: 30px;
+        text-align: center;
+        height: 5px;
+        width: 15%;
+        font-size: 12px;
+        padding: 10px;
+        color: #097aff;
+        background-color: white;
+        font-weight: bold;
+      }
+    }
+
+    &--gender {
+      justify-content: space-between;
+      margin: 0 auto;
+    }
+  }
+
+  &__gender {
+    width: 35%;
+    padding: 5px;
+    border: 2px solid #ccc;
+    border-radius: 5px;
+    cursor: pointer;
+
+    &--active {
+      border-color: #097aff;
+    }
+
+    & img {
+      max-width: 100%;
+      display: block;
+    }
+  }
+
+  &__text {
+    text-align: center;
+    margin: 15px 0 10px;
+    font-weight: bold;
+  }
 }
 
 .text-input {
@@ -89,54 +135,11 @@ body {
   border: 2px solid #eee;
   display: block;
   font-size: 16px;
-  color: #097AFF;
-}
+  color: #097aff;
 
-.text-input:focus {
-  border-color: #097AFF;
-}
-
-.form-view__input--text::after {
-  content: 'Wpisz imię';
-  position: absolute;
-  top: -15px;
-  left: 30px;
-  text-align: center;
-  height: 5px;
-  width: 15%;
-  font-size: 12px;
-  padding: 10px;
-  color: #097AFF;
-  background-color: white;
-  font-weight: bold;
-}
-
-.form-view__input--gender {
-  justify-content: space-between;
-  margin: 0 auto;
-}
-
-.form-view__gender {
-  width: 35%;
-  padding: 5px;
-  border: 2px solid #ccc;
-  border-radius: 5px;
-  cursor: pointer;
-}
-
-.form-view__gender--active {
-  border-color: #097AFF;
-}
-
-.form-view__gender img {
-  max-width: 100%;
-  display: block;
-}
-
-.form-view__text {
-  text-align: center;
-  margin: 15px 0 10px;
-  font-weight: bold;
+  &:focus {
+    border-color: #097aff;
+  }
 }
 
 .cta-container {
@@ -154,20 +157,21 @@ body {
   justify-content: center;
   cursor: pointer;
   position: relative;
+
+  & .button {
+    max-width: 100%;
+    display: block;
+    height: 45px;
+  }
 }
 
-.cta .button {
-  max-width: 100%;
-  display: block;
-  height: 45px;
-}
 
 .cta__question-mark {
   margin: auto 0;
   width: 70px;
   height: 70px;
   border-radius: 50%;
-  background-color: #097AFF;
+  background-color: #097aff;
   color: white;
   display: flex;
   justify-content: center;
@@ -176,28 +180,16 @@ body {
 }
 
 .cta__again::after {
-  content: 'Od nowa';
-  position: absolute;
-  color: white;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
+  content: "Od nowa";
+  @include button-text;
 }
 
 .cta__back::after {
-  content: 'Wstecz';
-  position: absolute;
-  color: white;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
+  content: "Wstecz";
+  @include button-text;
 }
 
 .cta__next::after {
-  content: 'Następny';
-  position: absolute;
-  color: white;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
+  content: "Następny";
+  @include button-text;
 }
