--- a/scss/style.scss
+++ b/scss/style.scss
@@ -1,4 +1,5 @@
 @import 'mixins';
+@import 'variables';
 
 body {
   font-family: "Open Sans", sans-serif;
@@ -33,19 +34,19 @@ body {
   margin-top: 25px;
   width: 100%;
   height: 3px;
-  background-color: #ccc;
+  background-color: $base-grey-color;
   display: flex;
   justify-content: space-between;
 
   &__dot {
     width: 15px;
     height: 15px;
-    background-color: #ccc;
+    background-color: $base-grey-color;
     border-radius: 50%;
     transform: translateY(-40%);
 
     &--active {
-      background-color: #097aff;
+      background-color: $basic-blue-color;
     }
   }
 
@@ -92,7 +93,7 @@ body {
         width: 15%;
         font-size: 12px;
         padding: 10px;
-        color: #097aff;
+        color: $basic-blue-color;
         background-color: white;
         font-weight: bold;
       }
@@ -107,12 +108,12 @@ body {
   &__gender {
     width: 35%;
     padding: 5px;
-    border: 2px solid #ccc;
+    border: 2px solid $base-grey-color;
     border-radius: 5px;
     cursor: pointer;
 
     &--active {
-      border-color: #097aff;
+      border-color: $basic-blue-color;
     }
 
     & img {
@@ -132,13 +133,13 @@ body {
   width: 100%;
   height: 40px;
   outline: none;
-  border: 2px solid #eee;
+  border: 2px solid $light-grey-color;
   display: block;
   font-size: 16px;
-  color: #097aff;
+  color: $basic-blue-color;
 
   &:focus {
-    border-color: #097aff;
+    border-color: $basic-blue-color;
   }
 }
 
@@ -171,7 +172,7 @@ body {
   width: 70px;
   height: 70px;
   border-radius: 50%;
-  background-color: #097aff;
+  background-color: $basic-blue-color;
   color: white;
   display: flex;
   justify-content: center;
