Create views depending on chosen gender

--- a/css/style.css
+++ b/css/style.css
@@ -44,7 +44,7 @@ body {
       background-color: #097aff;
       width: 20px;
       height: 20px;
-      background-size: 70%;
+      background-size: 50%;
       background-position: center center;
       background-repeat: no-repeat;
       color: white; }
@@ -52,18 +52,19 @@ body {
 .form-view {
   box-shadow: 10px 5px 15px 0 rgba(0, 0, 0, 0.25);
   border-radius: 5px;
-  height: 55vh;
+  height: auto;
+  padding-bottom: 30px;
   width: 70%;
   margin: 50px auto 0; }
   .form-view__title {
     font-size: 24px;
     margin-left: 30px;
+    margin-bottom: 20px;
     padding-top: 20px;
     text-align: center; }
   .form-view__question {
     font-size: 22px;
     margin-top: 20px;
-    margin-left: 30px;
     text-align: center; }
   .form-view__input {
     width: 50%;
@@ -105,6 +106,13 @@ body {
     margin: 15px 0 10px;
     font-weight: bold;
     line-height: 25px; }
+
+.image-box {
+  width: 40%;
+  margin: 30px auto 0; }
+  .image-box__image {
+    max-width: 100%;
+    display: block; }
 
 .text-input {
   width: 100%;
