--- a/css/style.css
+++ b/css/style.css
@@ -52,10 +52,12 @@ body {
 .form-view {
   box-shadow: 10px 5px 15px 0 rgba(0, 0, 0, 0.25);
   border-radius: 5px;
-  height: auto;
+  height: 520px;
   padding-bottom: 30px;
   width: 70%;
-  margin: 50px auto 0; }
+  margin: 50px auto 0;
+  position: relative;
+  z-index: 4; }
   .form-view__title {
     font-size: 24px;
     margin-left: 30px;
@@ -106,6 +108,21 @@ body {
     margin: 15px 0 10px;
     font-weight: bold;
     line-height: 25px; }
+  .form-view__image {
+    width: 50%;
+    position: absolute;
+    z-index: 2; }
+    .form-view__image--right {
+      right: -40%;
+      top: 50%;
+      transform: translateY(-50%); }
+    .form-view__image--left {
+      left: -40%;
+      top: 50%;
+      transform: translateY(-50%); }
+    .form-view__image-img {
+      display: block;
+      max-width: 100%; }
 
 .image-box {
   width: 40%;
