--- a/scss/style.scss
+++ b/scss/style.scss
@@ -67,10 +67,12 @@ body {
 .form-view {
   box-shadow: 10px 5px 15px 0 rgba(0, 0, 0, 0.25);
   border-radius: 5px;
-  height: auto;
+  height: 520px;
   padding-bottom: 30px;
   width: 70%;
   margin: 50px auto 0;
+  position: relative;
+  z-index: 4;
 
   &__title {
     font-size: 24px;
@@ -140,6 +142,28 @@ body {
     margin: 15px 0 10px;
     font-weight: bold;
     line-height: 25px;
+  }
+
+  &__image {
+    width: 50%;
+    position: absolute;
+    z-index: 2;
+
+    &--right {
+      right: -40%;
+      top: 50%;
+      transform: translateY(-50%);
+    }
+
+    &--left {
+      left: -40%;
+      top: 50%;
+      transform: translateY(-50%);
+    }
+    &-img {
+      display: block;
+      max-width: 100%;
+    }
   }
 }
 
