--- a/scss/style.scss
+++ b/scss/style.scss
@@ -61,7 +61,33 @@ body {
       background-repeat: no-repeat;
       color: white;
     }
+
+    &--answer {
+      transform: none;
+      height: 20px;
+      width: 20px;
+    }
+
+    &--refuse {
+      position: relative;
+
+      &::after {
+        content: 'X';
+        color: white;
+        font-size: 14px;
+        position: absolute;
+        top: 50%;
+        left: 50%;
+        transform: translate(-50%, -50%);
+      }
+    }
   }
+}
+
+.answer-text {
+  font-size: 16px;
+  line-height: 20px;
+  margin-left: 15px;
 }
 
 .form-view {
@@ -86,6 +112,10 @@ body {
     font-size: 22px;
     margin-top: 20px;
     text-align: center;
+    display: flex;
+    flex-direction: column;
+    height: inherit;
+    justify-content: space-evenly;
   }
 
   &__input {
@@ -160,9 +190,32 @@ body {
       top: 50%;
       transform: translateY(-50%);
     }
+
     &-img {
       display: block;
       max-width: 100%;
+    }
+  }
+
+  &__answers {
+    display: flex;
+    width: 50%;
+    margin: 0 auto;
+    justify-content: space-between;
+    align-items: center;
+  }
+
+  &__answer {
+    width: 40%;
+    border: 1px solid $base-grey-color;
+    padding: 10px;
+    cursor: pointer;
+    border-radius: 3px;
+    display: flex;
+    justify-content: center;
+
+    &--active {
+      border: 3px solid $basic-blue-color;
     }
   }
 }
@@ -170,6 +223,7 @@ body {
 .image-box {
   width: 40%;
   margin: 30px auto 0;
+
   &__image {
     max-width: 100%;
     display: block;
