--- a/scss/style.scss
+++ b/scss/style.scss
@@ -7,6 +7,12 @@ body {
   margin: 0 auto;
 }
 
+sup {
+  vertical-align: super;
+  font-size: smaller;
+  ;
+}
+
 .header {
   display: flex;
   margin-top: 80px;
@@ -203,6 +209,17 @@ body {
     margin: 0 auto;
     justify-content: space-between;
     align-items: center;
+
+    &--multiple {
+      flex-direction: column;
+      width: 80%;
+      flex-basis: 250px;
+
+      &>.form-view__answer {
+        justify-content: flex-start;
+        align-items: center;
+      }
+    }
   }
 
   &__answer {
@@ -217,6 +234,25 @@ body {
     &--active {
       border: 3px solid $basic-blue-color;
     }
+  }
+
+  &__circle {
+    width: 20px;
+    height: 20px;
+    border-radius: 50%;
+    border: 2px solid $base-grey-color;
+    position: relative;
+  }
+
+  &__active-circle {
+    width: 15px;
+    height: 15px;
+    border-radius: 50%;
+    background-color: $basic-blue-color;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
   }
 }
 
