--- a/css/style.css
+++ b/css/style.css
@@ -163,6 +163,8 @@ sup {
       .form-view__answers--multiple > .form-view__answer {
         justify-content: flex-start;
         align-items: center; }
+    .form-view__answers--card {
+      width: 95%; }
   .form-view__answer {
     width: 40%;
     border: 1px solid #ccc;
@@ -188,6 +190,62 @@ sup {
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%); }
+
+.card {
+  height: 350px;
+  width: 30%;
+  border: 2px solid #ccc;
+  position: relative;
+  z-index: 1;
+  cursor: pointer;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-around; }
+  .card--central {
+    width: 35%;
+    height: 400px;
+    border: 3px solid #097aff; }
+  .card__title {
+    padding: 20px; }
+  .card__text {
+    font-size: 14px;
+    padding: 0 10px; }
+  .card__image {
+    height: 50px;
+    width: 100px;
+    margin: 30px auto; }
+    .card__image img {
+      max-width: 100%;
+      display: block; }
+  .card__button {
+    height: 50px;
+    width: 50px;
+    border: 3px solid #ccc;
+    background-color: white;
+    border-radius: 50%;
+    position: absolute;
+    bottom: -25px;
+    left: 50%;
+    transform: translateX(-50%);
+    z-index: 2; }
+    .card__button--active {
+      height: 40px;
+      width: 40px;
+      background-color: #097aff;
+      border-radius: 50%;
+      position: absolute;
+      top: 50%;
+      left: 50%;
+      transform: translate(-50%, -50%); }
+    .card__button--inactive {
+      height: 40px;
+      width: 40px;
+      background-color: #ccc;
+      border-radius: 50%;
+      position: absolute;
+      top: 50%;
+      left: 50%;
+      transform: translate(-50%, -50%); }
 
 .image-box {
   width: 40%;
