--- a/scss/style.scss
+++ b/scss/style.scss
@@ -220,6 +220,10 @@ sup {
         align-items: center;
       }
     }
+
+    &--card {
+      width: 95%;
+    }
   }
 
   &__answer {
@@ -255,6 +259,80 @@ sup {
     transform: translate(-50%, -50%);
   }
 }
+
+.card {
+  height: 350px;
+  width: 30%;
+  border: 2px solid $base-grey-color;
+  position: relative;
+  z-index: 1;
+  cursor: pointer;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-around;
+
+  &--central {
+    width: 35%;
+    height: 400px;
+    border: 3px solid $basic-blue-color;
+  }
+
+  &__title {
+    padding: 20px;
+  }
+
+  &__text {
+    font-size: 14px;
+    padding: 0 10px;
+  }
+
+  &__image {
+    height: 50px;
+    width: 100px;
+    margin: 30px auto;
+
+    & img {
+      max-width: 100%;
+      display: block;
+    }
+  }
+
+  &__button {
+    height: 50px;
+    width: 50px;
+    border: 3px solid $base-grey-color;
+    background-color: white;
+    border-radius: 50%;
+    position: absolute;
+    bottom: -25px;
+    left: 50%;
+    transform: translateX(-50%);
+    z-index: 2;
+
+    &--active {
+      height: 40px;
+      width: 40px;
+      background-color: $basic-blue-color;
+      border-radius: 50%;
+      position: absolute;
+      top: 50%;
+      left: 50%;
+      transform: translate(-50%, -50%);
+    }
+
+    &--inactive {
+      height: 40px;
+      width: 40px;
+      background-color: $base-grey-color;
+      border-radius: 50%;
+      position: absolute;
+      top: 50%;
+      left: 50%;
+      transform: translate(-50%, -50%);
+    }
+  }
+}
+
 
 .image-box {
   width: 40%;
