--- a/scss/variables.scss
+++ b/scss/variables.scss
@@ -1,3 +1,5 @@
 $base-grey-color: #ccc;
 $light-grey-color: #eee;
 $basic-blue-color: #097aff;
+$darker-blue-color:#0862c9;
+$light-green-color: #0AD488;
