--- a/css/style.css
+++ b/css/style.css
@@ -75,18 +75,22 @@ sup {
 .form-view {
   box-shadow: 10px 5px 15px 0 rgba(0, 0, 0, 0.25);
   border-radius: 5px;
-  height: 520px;
+  height: 600px;
   padding-bottom: 30px;
-  width: 70%;
+  width: 80%;
   margin: 50px auto 0;
   position: relative;
   z-index: 4; }
+  .form-view--final {
+    background: linear-gradient(45deg, #097aff, white); }
   .form-view__title {
     font-size: 24px;
     margin-left: 30px;
     margin-bottom: 20px;
     padding-top: 20px;
     text-align: center; }
+    .form-view__title--final {
+      color: white; }
   .form-view__question {
     font-size: 22px;
     margin-top: 20px;
@@ -95,6 +99,11 @@ sup {
     flex-direction: column;
     height: inherit;
     justify-content: space-evenly; }
+    .form-view__question--final {
+      height: 75%;
+      justify-content: flex-start;
+      background-color: #097aff;
+      clip-path: polygon(0 0, 100% 0, 100% 85%, 0% 100%); }
   .form-view__input {
     width: 50%;
     margin-left: 30px;
@@ -190,6 +199,45 @@ sup {
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%); }
+  .form-view__greetings-box {
+    margin-left: 50px;
+    margin-top: 30px;
+    padding: 10px;
+    width: 40%;
+    background-color: #0862c9;
+    border-radius: 20px;
+    display: flex;
+    justify-content: center; }
+  .form-view__greetings-text {
+    color: white;
+    font-size: 12px;
+    padding: 0 15px; }
+  .form-view__greetings-icon-box {
+    height: 25px;
+    width: 80px;
+    border-radius: 30px;
+    background-color: #0AD488; }
+  .form-view__greetings-icon {
+    background: url("../img/smile.png");
+    background-size: 45%;
+    background-repeat: no-repeat;
+    height: 25px;
+    background-position: center center; }
+  .form-view__summary {
+    margin-top: 20px;
+    width: 60%; }
+    .form-view__summary-title {
+      color: white;
+      font-size: 36px;
+      text-align: left;
+      padding: 0 30px; }
+    .form-view__summary-subtitle {
+      margin-top: 20px;
+      color: white;
+      font-size: 18px;
+      text-align: left;
+      padding: 0 30px;
+      width: 80%; }
 
 .card {
   height: 350px;
@@ -201,12 +249,30 @@ sup {
   display: flex;
   flex-direction: column;
   justify-content: space-around; }
+  .card--final {
+    position: absolute;
+    top: 20%;
+    right: 15%;
+    background-color: white;
+    justify-content: flex-start; }
+  .card--small {
+    height: 250px;
+    width: 200px;
+    position: absolute;
+    top: 28%;
+    right: 3%;
+    background-color: white;
+    justify-content: flex-start; }
   .card--central {
     width: 35%;
     height: 400px;
     border: 3px solid #097aff; }
+  .card--active {
+    border: 3px solid #097aff; }
   .card__title {
-    padding: 20px; }
+    font-size: 22px;
+    text-align: center;
+    padding: 20px 20px 0; }
   .card__text {
     font-size: 14px;
     padding: 0 10px; }
@@ -214,6 +280,10 @@ sup {
     height: 50px;
     width: 100px;
     margin: 30px auto; }
+    .card__image--final {
+      width: 250px; }
+    .card__image--small {
+      width: 50px; }
     .card__image img {
       max-width: 100%;
       display: block; }
@@ -297,6 +367,15 @@ sup {
   align-items: center;
   font-size: 30px; }
 
+.cta__download {
+  width: 250px;
+  z-index: 3;
+  position: absolute;
+  padding: 0 30px;
+  transform: translateY(-50px); }
+  .cta__download .button {
+    height: 70px; }
+
 .cta__again::after {
   content: "Od nowa";
   position: absolute;
@@ -315,6 +394,14 @@ sup {
 
 .cta__next::after {
   content: "Następny";
+  position: absolute;
+  color: white;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%); }
+
+.cta__download::after {
+  content: "Pobierz";
   position: absolute;
   color: white;
   top: 50%;
