--- a/css/style.css
+++ b/css/style.css
@@ -148,16 +148,15 @@ sup {
     .form-view__image--right {
       right: -30%;
       top: 50%;
-      transform: translateY(-50%); }
+      transform: translateY(-50%) translateX(150%); }
       .form-view__image--right > img {
-        animation: .3s linear .3s alternate animate-from-right; }
+        animation: 1s ease-in .2s forwards animate-from-right; }
     .form-view__image--left {
       left: -30%;
       top: 50%;
-      transform: translateY(-50%);
-      animation: .3s linear .3s alternate animate-from-left; }
+      transform: translateY(-50%) translateX(-150%); }
       .form-view__image--left > img {
-        animation: .3s linear .3s alternate animate-from-left; }
+        animation: 1s ease-in .2s forwards animate-from-left; }
     .form-view__image-img {
       z-index: -1;
       display: block;
@@ -325,7 +324,8 @@ sup {
   margin: 30px auto 0; }
   .image-box__image {
     max-width: 100%;
-    display: block; }
+    display: block;
+    animation: 1s ease-in .2s forwards animate-from-bottom; }
 
 .text-input {
   width: 100%;
@@ -413,20 +413,26 @@ sup {
 
 @keyframes animate-from-left {
   from {
-    transform: translateX(-100%);
+    transform: translateX(-150%);
     opacity: 0;
     visibility: hidden; }
   to {
-    transform: translateX(0%);
+    transform: translateX(150%);
     opacity: 1;
     visibility: visible; } }
 
 @keyframes animate-from-right {
   from {
-    transform: translateX(100%);
+    transform: translateX(150%);
     opacity: 0;
     visibility: hidden; }
   to {
-    transform: translateX(0%);
+    transform: translateX(-150%);
     opacity: 1;
     visibility: visible; } }
+
+@keyframes animate-from-bottom {
+  from {
+    transform: translateY(200%); }
+  to {
+    transform: translateY(0%); } }
