--- a/css/style.css
+++ b/css/style.css
@@ -59,7 +59,7 @@ sup {
     .step-line__dot--refuse {
       position: relative; }
       .step-line__dot--refuse::after {
-        content: 'X';
+        content: "X";
         color: white;
         font-size: 14px;
         position: absolute;
@@ -128,9 +128,8 @@ sup {
   .form-view__gender {
     width: 35%;
     padding: 15px;
-    border: 2px solid #ccc;
-    border-radius: 5px;
-    cursor: pointer; }
+    cursor: pointer;
+    position: relative; }
     .form-view__gender--active {
       border-color: #097aff; }
     .form-view__gender img {
@@ -150,13 +149,13 @@ sup {
       top: 50%;
       transform: translateY(-50%) translateX(150%); }
       .form-view__image--right > img {
-        animation: 1s ease-in .2s forwards animate-from-right; }
+        animation: 1s ease-in 0.2s forwards animate-from-right; }
     .form-view__image--left {
       left: -30%;
       top: 50%;
       transform: translateY(-50%) translateX(-150%); }
       .form-view__image--left > img {
-        animation: 1s ease-in .2s forwards animate-from-left; }
+        animation: 1s ease-in 0.2s forwards animate-from-left; }
     .form-view__image-img {
       z-index: -1;
       display: block;
@@ -178,14 +177,12 @@ sup {
       width: 95%; }
   .form-view__answer {
     width: 40%;
-    border: 1px solid #ccc;
     padding: 10px;
     cursor: pointer;
     border-radius: 3px;
     display: flex;
-    justify-content: center; }
-    .form-view__answer--active {
-      border: 3px solid #097aff; }
+    justify-content: center;
+    position: relative; }
   .form-view__circle {
     width: 20px;
     height: 20px;
@@ -244,13 +241,13 @@ sup {
 .card {
   height: 350px;
   width: 30%;
-  border: 2px solid #ccc;
   position: relative;
   z-index: 1;
   cursor: pointer;
   display: flex;
   flex-direction: column;
-  justify-content: space-around; }
+  justify-content: space-around;
+  position: relative; }
   .card--final {
     position: absolute;
     top: 20%;
@@ -267,10 +264,7 @@ sup {
     justify-content: flex-start; }
   .card--central {
     width: 35%;
-    height: 400px;
-    border: 3px solid #097aff; }
-  .card--active {
-    border: 3px solid #097aff; }
+    height: 400px; }
   .card__title {
     font-size: 22px;
     text-align: center;
@@ -325,7 +319,7 @@ sup {
   .image-box__image {
     max-width: 100%;
     display: block;
-    animation: 1s ease-in .2s forwards animate-from-bottom; }
+    animation: 1s ease-in 0.2s forwards animate-from-bottom; }
 
 .text-input {
   width: 100%;
@@ -436,3 +430,20 @@ sup {
     transform: translateY(200%); }
   to {
     transform: translateY(0%); } }
+
+input[type="checkbox" i] {
+  -webkit-appearance: none;
+  appearance: none;
+  height: 100%;
+  width: 100%;
+  margin: 0;
+  position: absolute;
+  top: 0;
+  left: 0;
+  cursor: pointer;
+  outline: none;
+  border: 2px solid #ccc;
+  border-radius: 5px; }
+
+input:checked {
+  border: 2px solid #097aff; }
