--- a/css/style.css
+++ b/css/style.css
@@ -10,7 +10,7 @@ sup {
 
 .header {
   display: flex;
-  margin-top: 80px;
+  margin-top: 40px 0;
   width: 900px; }
 
 .logo-box {
@@ -73,13 +73,15 @@ sup {
   margin-left: 15px; }
 
 .form-view {
-  box-shadow: 10px 5px 15px 0 rgba(0, 0, 0, 0.25);
   border-radius: 5px;
   height: 600px;
   padding-bottom: 30px;
   width: 80%;
   margin: 50px auto 0;
-  position: relative; }
+  position: relative;
+  background: rgba(255, 255, 255, 0.85);
+  display: none;
+  overflow: hidden; }
   .form-view__title {
     font-size: 24px;
     margin-left: 30px;
@@ -238,6 +240,9 @@ sup {
       padding: 0 30px;
       width: 80%; }
 
+.active {
+  display: block; }
+
 .card {
   height: 350px;
   width: 30%;
@@ -336,7 +341,7 @@ sup {
 .cta-container {
   width: 70%;
   height: 10vh;
-  margin: 20px auto;
+  margin: 0 auto;
   display: flex;
   justify-content: space-between; }
 
