--- a/css/style.css
+++ b/css/style.css
@@ -171,7 +171,7 @@ sup {
     .form-view__answers--multiple {
       flex-direction: column;
       width: 80%;
-      flex-basis: 250px; }
+      height: 250px; }
       .form-view__answers--multiple > .form-view__answer {
         justify-content: flex-start;
         align-items: center; }
@@ -436,7 +436,7 @@ sup {
   to {
     transform: translateY(0%); } }
 
-input[type="checkbox" i] {
+input[type="radio" i] {
   -webkit-appearance: none;
   appearance: none;
   height: 100%;
