--- a/css/style.css
+++ b/css/style.css
@@ -80,8 +80,7 @@ sup {
   margin: 50px auto 0;
   position: relative;
   background: rgba(255, 255, 255, 0.85);
-  display: none;
-  overflow: hidden; }
+  display: none; }
   .form-view__title {
     font-size: 24px;
     margin-left: 30px;
@@ -161,7 +160,7 @@ sup {
     .form-view__image-img {
       z-index: -1;
       display: block;
-      max-width: 100%; }
+      max-width: 85%; }
   .form-view__answers {
     display: flex;
     width: 50%;
@@ -322,6 +321,7 @@ sup {
   width: 40%;
   margin: 30px auto 0; }
   .image-box__image {
+    transform: translateY(300%);
     max-width: 100%;
     display: block;
     animation: 1s ease-in 0.2s forwards animate-from-bottom; }
@@ -416,7 +416,7 @@ sup {
     opacity: 0;
     visibility: hidden; }
   to {
-    transform: translateX(150%);
+    transform: translateX(195%);
     opacity: 1;
     visibility: visible; } }
 
@@ -426,7 +426,7 @@ sup {
     opacity: 0;
     visibility: hidden; }
   to {
-    transform: translateX(-150%);
+    transform: translateX(-180%);
     opacity: 1;
     visibility: visible; } }
 
