--- a/css/style.css
+++ b/css/style.css
@@ -1,8 +1,9 @@
 @charset "UTF-8";
 body {
-  font-family: "Open Sans", sans-serif;
+  font-family: "Roboto";
   width: 1200px;
-  margin: 0 auto; }
+  margin: 0 auto;
+  overflow: hidden; }
 
 sup {
   vertical-align: super;
@@ -38,16 +39,25 @@ sup {
     height: 15px;
     background-color: #ccc;
     border-radius: 50%;
-    transform: translateY(-40%); }
+    transform: translateY(-40%);
+    position: relative; }
     .step-line__dot--active {
-      background-color: #097aff;
-      width: 25px;
-      height: 25px; }
+      background-color: transparent;
+      animation: 0.6s ease-in forwards animate-color; }
+      .step-line__dot--active:not(:first-of-type)::before {
+        content: "";
+        height: 4px;
+        position: absolute;
+        top: 53%;
+        left: -35px;
+        transform: translateY(-50%);
+        background-color: #097aff;
+        z-index: -1;
+        width: 0;
+        animation: 0.5s ease-in forwards animate-width; }
     .step-line__dot--done {
       background: url("../img/fajka.png");
       background-color: #097aff;
-      width: 20px;
-      height: 20px;
       background-size: 50%;
       background-position: center center;
       background-repeat: no-repeat;
@@ -81,7 +91,7 @@ sup {
   position: relative;
   background: rgba(255, 255, 255, 0.85);
   display: none;
-  overflow: hidden; }
+  box-shadow: 0 0 10px #b9b9b9; }
   .form-view__title {
     font-size: 24px;
     margin-left: 30px;
@@ -324,7 +334,8 @@ sup {
   .image-box__image {
     max-width: 100%;
     display: block;
-    animation: 1s ease-in 0.2s forwards animate-from-bottom; }
+    transform: translateY(200%);
+    animation: 0.5s ease-in 0.2s forwards animate-from-bottom; }
 
 .text-input {
   width: 100%;
@@ -419,6 +430,18 @@ sup {
     transform: translateX(150%);
     opacity: 1;
     visibility: visible; } }
+
+@keyframes animate-width {
+  from {
+    width: 0; }
+  to {
+    width: 35px; } }
+
+@keyframes animate-color {
+  from {
+    background-color: #ccc; }
+  to {
+    background-color: #097aff; } }
 
 @keyframes animate-from-right {
   from {
