--- a/scss/variables.scss
+++ b/scss/variables.scss
@@ -2,4 +2,5 @@ $base-grey-color: #ccc;
 $light-grey-color: #eee;
 $basic-blue-color: #097aff;
 $darker-blue-color:#0862c9;
+$light-blue-color: #3a96ff;
 $light-green-color: #0AD488;
