--- a/css/style.css
+++ b/css/style.css
@@ -66,17 +66,14 @@ sup {
       transform: none;
       height: 20px;
       width: 20px;
-      background-color: #ccc; }
-    .step-line__dot--refuse {
-      position: relative; }
-      .step-line__dot--refuse::after {
-        content: "X";
-        color: white;
-        font-size: 14px;
-        position: absolute;
-        top: 50%;
-        left: 50%;
-        transform: translate(-50%, -50%); }
+      background-color: #ccc;
+      color: white; }
+    .step-line__dot i {
+      font-size: 14px;
+      position: absolute;
+      top: 50%;
+      left: 50%;
+      transform: translate(-50%, -50%); }
 
 .answer-text {
   font-size: 16px;
@@ -300,35 +297,37 @@ sup {
       max-width: 100%;
       display: block; }
   .card__button {
-    height: 50px;
-    width: 50px;
-    border: 3px solid #ccc;
-    background-color: white;
-    border-radius: 50%;
+    background-color: #fff;
     position: absolute;
-    bottom: -25px;
+    bottom: -50px;
     left: 50%;
-    transform: translateX(-50%);
-    z-index: 2; }
-    .card__button--active {
-      height: 40px;
-      width: 40px;
-      border-radius: 50%;
+    z-index: 5;
+    height: 75px;
+    width: 50px;
+    transform: translateX(-50%); }
+    .card__button::before {
       position: absolute;
-      top: 50%;
+      content: '';
+      top: -8%;
       left: 50%;
-      transform: translate(-50%, -50%);
-      transition: all .2s ease-in;
-      background-color: #ccc; }
-    .card__button--inactive {
-      height: 40px;
-      width: 40px;
+      height: 50px;
+      width: 50px;
+      background-color: #fff;
+      border: 1px solid #ccc;
+      border-radius: 50%;
+      transform: translate(-50%);
+      z-index: 3; }
+    .card__button::after {
+      position: absolute;
+      content: '';
+      top: 3%;
+      left: 50%;
+      height: 35px;
+      width: 35px;
       background-color: #ccc;
+      z-index: 3;
       border-radius: 50%;
-      position: absolute;
-      top: 50%;
-      left: 50%;
-      transform: translate(-50%, -50%); }
+      transform: translate(-50%); }
 
 .image-box {
   width: 40%;
@@ -358,19 +357,34 @@ sup {
   height: 10vh;
   margin: 0 auto;
   display: flex;
-  justify-content: space-between; }
+  justify-content: space-between;
+  position: relative; }
 
 .cta {
+  margin-top: 35px;
   width: 180px;
   display: flex;
-  flex-direction: column;
-  justify-content: center;
+  align-items: center;
   cursor: pointer;
-  position: relative; }
-  .cta .button {
-    max-width: 100%;
-    display: block;
-    height: 45px; }
+  position: relative;
+  background-color: #097aff;
+  height: 40px;
+  border-radius: 5px;
+  outline: none;
+  border: none;
+  color: white;
+  transition: all .2s ease-in;
+  top: 0; }
+  .cta .fas {
+    font-size: 16px;
+    margin-right: 30px; }
+  .cta span {
+    font-size: 16px; }
+  .cta:hover {
+    background-color: #3a96ff; }
+  .cta:active {
+    top: 6px;
+    box-shadow: 0 3px 0 #0862c9; }
 
 .cta__question-mark {
   margin: auto 0;
@@ -382,7 +396,13 @@ sup {
   display: flex;
   justify-content: center;
   align-items: center;
-  font-size: 30px; }
+  position: relative; }
+  .cta__question-mark i {
+    font-size: 36px;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%); }
 
 .cta__download {
   width: 250px;
@@ -392,38 +412,6 @@ sup {
   transform: translateY(-50px); }
   .cta__download .button {
     height: 70px; }
-
-.cta__again::after {
-  content: "Od nowa";
-  position: absolute;
-  color: white;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%); }
-
-.cta__back::after {
-  content: "Wstecz";
-  position: absolute;
-  color: white;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%); }
-
-.cta__next::after {
-  content: "Następny";
-  position: absolute;
-  color: white;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%); }
-
-.cta__download::after {
-  content: "Pobierz";
-  position: absolute;
-  color: white;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%); }
 
 @keyframes animate-from-left {
   from {
@@ -488,5 +476,5 @@ input[type="radio"]:checked ~ .step-line__dot {
 input[type="radio"]:checked ~ .form-view__circle .form-view__active-circle {
   background-color: #097aff; }
 
-input[type="radio"]:checked ~ .card__button .card__button--active {
+input[type="radio"]:checked ~ .card__button::after {
   background-color: #097aff; }
